--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               information about the classmate such as thier gmail,contact info,etc.
 
               <br>
-            <b>Institution</b> - Nepal College of Informtion Technology.<br>
+            <b>Institution</b> - Nepal College of Informassstion Technology.<br>
             <b>Duration</b> - 6 months <br>
             <b>Location</b> - Lalitpur,Nepal<br>
           </p>
@@ -108,7 +108,7 @@ Knowing what goes inside our body is critical to keep ourselves healthy and chan
 In this application we use Mask R-CNN (deep learning algorithm) to classify food and provide
 approximate nutritional value the food contains.
 <br>
-            <b>Institution</b> - Nepal College of Informtion Technology.<br>
+            <b>Institution</b> - Nepal College of Information Technology.<br>
             <b>Duration</b> - 6 months <br>
             <b>Location</b> - Lalitpur,Nepal<br>
             </p>
@@ -122,13 +122,13 @@ approximate nutritional value the food contains.
       <h4><span>RUNNING - </span> Bachelor In Software Engineering.</h4>
       <p>
       <br>
-      <b>Institution</b> - Nepal College of Informtion Technology.<br>
+      <b>Institution</b> - Nepal College of Information Technology.<br>
       <b>Session</b> - 2073-RUNNING <br>
       <b>Location</b> - Lalitpur,Nepal<br>
     </p>
     </li>
     <li>
-      <h4><span>2016 - </span> Immediate Level in Science & Technology.</h4>
+      <h4><span>2016 - </span> Intermediate Level in Science & Technology.</h4>
       <p>
       <br>
       <b>Institution</b> - NIST.<br>
@@ -170,17 +170,27 @@ approximate nutritional value the food contains.
           As of 2019, Java was one of the most popular programming 
           languages in use according to GitHub,[particularly for client-
           server web applications, with a reported 9 million developers.
+
       </p>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
     </div>
   </div>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
+
   <div class="col-md-6">  
     <div class="services-box">
       <i class="fa fa-language"></i><span>Programmin In JavaScript</span>
@@ -199,6 +209,22 @@ approximate nutritional value the food contains.
         information is actually transmitted to the server.There are many 
         platform of javascript developers like nodejs ,reactjs & expressjs.
   </p>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
     </div>
   </div>
 
@@ -235,7 +261,7 @@ approximate nutritional value the food contains.
     class="btn btn-primary"><i class="fa fa-rocket"></i>Hire Me</button></a>
   </div>
   <div class="footer text-center">
-    <p>Made wiTh <i class="fa fa-heart-o"></i> By Sumit Paudel</p>
+    <p>Made <i class="fa fa-heart-o"></i> By Sumit Paudel</p>
   </div>
   </div>
    </section>
